Fixes with message format

--- a/src/vk_config.v2.json
+++ b/src/vk_config.v2.json
@@ -236,7 +236,7 @@
         },
         "rfc2109": false,
         "secure": true,
-        "value": "5bab17cbedf4f1ca573be0df485aa7dd444b906025970a8dea72b",
+        "value": "40c870fe15f2e4083e16ebf3bc8f46094cd189f64e32a693fb441",
         "version": 0
       },
       {
@@ -295,7 +295,7 @@
         "rest": {},
         "rfc2109": false,
         "secure": true,
-        "value": "8c0f076f06856e1039a8bde5f7448817951075261483fd08fb918",
+        "value": "82c571e688934dc249b84802acbd1219125796797ae22e3d0b495",
         "version": 0
       },
       {
@@ -314,7 +314,7 @@
         "rest": {},
         "rfc2109": false,
         "secure": false,
-        "value": "258059243_1ee8ec7b235a47cc92",
+        "value": "0_a4ebb2ebb6b918adc5",
         "version": 0
       },
       {
@@ -335,7 +335,7 @@
         },
         "rfc2109": false,
         "secure": true,
-        "value": "M2E1N2M0YjUzNTQwZjBkZWExZGM3ZDVm",
+        "value": "NTNjMTJkMDljNjhmNTNhMDc3NWI1MjE5",
         "version": 0
       }
     ],
